# ELEC5660-2021

./: .gitignore  .ignore  readme.md
project1/proj1phase1/: README.txt  proj1phase1.md
project1/proj1phase1/code/: circle_trajectory.m  controller.m  controller.m~  diamond_trajectory.m  hover_trajectory.m  test_trajectory.m  test_trajectory.m~  trajectory_generator.m
project1/proj1phase1/code/readonly/: run_trajectory_readonly.m
project1/proj1phase1/code/resources/project/: ProjectData.type.Info.xml
project1/proj1phase1/code/resources/project/Root.type.ProjectPath/: 680ca155-79aa-40e2-90b1-ad26acda3d9a.type.Reference.xml
project1/proj1phase2/: README.txt
project1/proj1phase2/code/: controller.m  test.m  test_trajectory.m  trajectory_generator.m  trajectory_generator.m~
project1/proj1phase2/code/readonly/: run_trajectory_readonly.m
project1/proj1phase3/: README.txt  project1pahse3_Jiawei.md
project1/proj1phase3/code/: controller.m  path_from_A_star.m  test_trajectory.m  trajectory_generator.m
project1/proj1phase3/code/readonly/: run_trajectory_readonly.m
project2/project2phase1/: readme.md
project2/project2phase1/aruco-1.2.4/android/: Aruco.mk  CMakeCache.android.initial.cmake
project2/project2phase1/aruco-1.2.4/src/: marker.cpp
project2/project2phase1/aruco-1.2.4/utils/: CMakeLists.txt  aruco_board_pix2meters.cpp  aruco_create_board.cpp  aruco_create_marker.cpp  aruco_selectoptimalmarkers.cpp  aruco_simple.cpp  aruco_simple_board.cpp  aruco_test.cpp  aruco_test_board.cpp  aruco_test_board_gl.cpp  aruco_test_board_mask.cpp  aruco_test_board_stability.cpp  aruco_test_gl.cpp
project2/project2phase1/tag_detector/config/: camera2.yml
project2/project2phase1/tag_detector/src/: tag_detector_node.cpp
project2/project2phase2/: project2pahse2_Jiawei.md  readme.md
project2/project2phase2/stereo_vo_estimator/: package.xml
project2/project2phase2/stereo_vo_estimator/config/realsense_1/: realsense_n3_unsync.yaml
project2/project2phase2/stereo_vo_estimator/include/: parameters.h  stereo_vo.h
project2/project2phase2/stereo_vo_estimator/msg/: relative_pose.msg
project2/project2phase2/stereo_vo_estimator/src/: estimator.cpp  parameters.cpp  stereo_vo_node.cpp
project3/project3phase1/: project3pahse1_Jiawei.md  readme.md
project3/project3phase1/ekf/: CMakeLists.txt  package.xml
project3/project3phase1/ekf/config/: TA-camera.yml  tag_1.yml
project3/project3phase1/ekf/launch/: A3.launch
project3/project3phase1/ekf/src/: ekf_node (copy).cpp  ekf_node.cpp
project3/project3phase1/script/: EKF_test.m  jacobiG2x.m  linearization.m  linnearize.mat  matlab.mat  measurement_linear.mat  measurement_linear_atan.mat  ndim_KF.m  untitled.m
project3/project3phase2/: project3pahse2_Jiawei.md  readme.md
project3/project3phase2/aug_ekf/: CMakeLists.txt  package.xml
project3/project3phase2/aug_ekf/include/: ekf_filter.h  ekf_model.h
project3/project3phase2/aug_ekf/launch/: augekf.launch  augekf_simple.launch
project3/project3phase2/aug_ekf/src/: data_for_debug.txt  ekf_filter.cpp  ekf_model.cpp  ekf_node.cpp
project3/project3phase2/stereo_vo/stereo_vo_estimator_/: CMakeLists.txt
project3/project3phase2/stereo_vo/stereo_vo_estimator_/config/: stereo.rviz
project3/project3phase2/stereo_vo/stereo_vo_estimator_/config/realsense_1/: left.yaml  right.yaml
project3/project3phase2/stereo_vo/stereo_vo_estimator_/config/realsense_2/: realsense_n3_unsync.yaml  right.yaml
project3/project3phase2/stereo_vo/stereo_vo_estimator_/include/: estimator.h  my.cpp  testing.cpp
project3/project3phase2/stereo_vo/stereo_vo_estimator_/launch/: stereo_vo_bag.launch
project3/project3phase2/stereo_vo/stereo_vo_estimator_/src/: estimator.cpp
project3/project3phase2/tag_detector/: CMakeLists.txt
project3/project3phase2/tag_detector/config/: a.yml  pt_grey.yml
project3/project3phase2/tag_detector/launch/: bag_tag.launch
project3/project3phase2/tag_detector/script/: 2D_3D_points_data.mat  svd_script.m
project3/project3phase2/tag_detector/src/: tag_detector_node.cpp
testing/: angular_velocity.m
